--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
+    "mysql2": "^3.16.0",
     "next": "16.0.2",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
